@@ -5,6 +5,7 @@
  */
 package io.debezium.jdbc;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.CallableStatement;
 import java.sql.Connection;
 import java.sql.DatabaseMetaData;
@@ -28,6 +29,7 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
+import java.util.function.Supplier;
 
 import org.apache.kafka.connect.errors.ConnectException;
 import org.slf4j.Logger;
@@ -39,7 +41,6 @@ import io.debezium.config.Configuration;
 import io.debezium.config.Field;
 import io.debezium.relational.Column;
 import io.debezium.relational.ColumnEditor;
-import io.debezium.relational.TableEditor;
 import io.debezium.relational.TableId;
 import io.debezium.relational.Tables;
 import io.debezium.relational.Tables.ColumnNameFilter;
@@ -61,17 +62,18 @@ public class JdbcConnection implements AutoCloseable {
     private static final char STATEMENT_DELIMITER = ';';
     private static final int STATEMENT_CACHE_CAPACITY = 10_000;
     private final static Logger LOGGER = LoggerFactory.getLogger(JdbcConnection.class);
-    private final Map<String, PreparedStatement> statementCache = new BoundedConcurrentHashMap<>(STATEMENT_CACHE_CAPACITY, 16, Eviction.LIRS, new EvictionListener<String, PreparedStatement>() {
+    private final Map<String, PreparedStatement> statementCache = new BoundedConcurrentHashMap<>(STATEMENT_CACHE_CAPACITY, 16, Eviction.LIRS,
+            new EvictionListener<String, PreparedStatement>() {
 
-        @Override
-        public void onEntryEviction(Map<String, PreparedStatement> evicted) {
-        }
+                @Override
+                public void onEntryEviction(Map<String, PreparedStatement> evicted) {
+                }
 
-        @Override
-        public void onEntryChosenForEviction(PreparedStatement statement) {
-            cleanupPreparedStatement(statement);
-        }
-    });
+                @Override
+                public void onEntryChosenForEviction(PreparedStatement statement) {
+                    cleanupPreparedStatement(statement);
+                }
+            });
 
     /**
      * Establishes JDBC connections.
@@ -89,6 +91,29 @@ public class JdbcConnection implements AutoCloseable {
         Connection connect(JdbcConfiguration config) throws SQLException;
     }
 
+    private class ConnectionFactoryDecorator implements ConnectionFactory {
+        private final ConnectionFactory defaultConnectionFactory;
+        private final Supplier<ClassLoader> classLoaderSupplier;
+        private ConnectionFactory customConnectionFactory;
+
+        private ConnectionFactoryDecorator(ConnectionFactory connectionFactory, Supplier<ClassLoader> classLoaderSupplier) {
+            this.defaultConnectionFactory = connectionFactory;
+            this.classLoaderSupplier = classLoaderSupplier;
+        }
+
+        @Override
+        public Connection connect(JdbcConfiguration config) throws SQLException {
+            if (Strings.isNullOrEmpty(config.getConnectionFactoryClassName())) {
+                return defaultConnectionFactory.connect(config);
+            }
+            if (customConnectionFactory == null) {
+                customConnectionFactory = config.getInstance(JdbcConfiguration.CONNECTION_FACTORY_CLASS,
+                        ConnectionFactory.class, classLoaderSupplier);
+            }
+            return customConnectionFactory.connect(config);
+        }
+    }
+
     /**
      * Defines multiple JDBC operations.
      */
@@ -101,6 +126,14 @@ public class JdbcConnection implements AutoCloseable {
          * @throws SQLException if there is an error connecting to the database or executing the statements
          */
         void apply(Statement statement) throws SQLException;
+    }
+
+    /**
+     * Extracts a data of resultset..
+     */
+    @FunctionalInterface
+    public static interface ResultSetExtractor<T> {
+        T apply(ResultSet rs) throws SQLException;
     }
 
     /**
@@ -119,19 +152,25 @@ public class JdbcConnection implements AutoCloseable {
      */
     public static ConnectionFactory patternBasedFactory(String urlPattern, Field... variables) {
         return (config) -> {
-            LOGGER.trace("Config: {}", config.asProperties());
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Config: {}", propsWithMaskedPassword(config.asProperties()));
+            }
             Properties props = config.asProperties();
             Field[] varsWithDefaults = combineVariables(variables,
-                                                        JdbcConfiguration.HOSTNAME,
-                                                        JdbcConfiguration.PORT,
-                                                        JdbcConfiguration.USER,
-                                                        JdbcConfiguration.PASSWORD,
-                                                        JdbcConfiguration.DATABASE);
+                    JdbcConfiguration.HOSTNAME,
+                    JdbcConfiguration.PORT,
+                    JdbcConfiguration.USER,
+                    JdbcConfiguration.PASSWORD,
+                    JdbcConfiguration.DATABASE);
             String url = findAndReplace(urlPattern, props, varsWithDefaults);
-            LOGGER.trace("Props: {}", props);
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Props: {}", propsWithMaskedPassword(props));
+            }
             LOGGER.trace("URL: {}", url);
             Connection conn = DriverManager.getConnection(url, props);
-            LOGGER.debug("Connected to {} with {}", url, props);
+            if (LOGGER.isDebugEnabled()) {
+                LOGGER.debug("Connected to {} with {}", url, propsWithMaskedPassword(props));
+            }
             return conn;
         };
     }
@@ -155,18 +194,22 @@ public class JdbcConnection implements AutoCloseable {
      */
     @SuppressWarnings("unchecked")
     public static ConnectionFactory patternBasedFactory(String urlPattern, String driverClassName,
-            ClassLoader classloader, Field... variables) {
+                                                        ClassLoader classloader, Field... variables) {
         return (config) -> {
-            LOGGER.trace("Config: {}", config.asProperties());
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Config: {}", propsWithMaskedPassword(config.asProperties()));
+            }
             Properties props = config.asProperties();
             Field[] varsWithDefaults = combineVariables(variables,
-                                                        JdbcConfiguration.HOSTNAME,
-                                                        JdbcConfiguration.PORT,
-                                                        JdbcConfiguration.USER,
-                                                        JdbcConfiguration.PASSWORD,
-                                                        JdbcConfiguration.DATABASE);
+                    JdbcConfiguration.HOSTNAME,
+                    JdbcConfiguration.PORT,
+                    JdbcConfiguration.USER,
+                    JdbcConfiguration.PASSWORD,
+                    JdbcConfiguration.DATABASE);
             String url = findAndReplace(urlPattern, props, varsWithDefaults);
-            LOGGER.trace("Props: {}", props);
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("Props: {}", propsWithMaskedPassword(props));
+            }
             LOGGER.trace("URL: {}", url);
             Connection conn = null;
             try {
@@ -175,14 +218,26 @@ public class JdbcConnection implements AutoCloseable {
                     driverClassLoader = JdbcConnection.class.getClassLoader();
                 }
                 Class<java.sql.Driver> driverClazz = (Class<java.sql.Driver>) Class.forName(driverClassName, true, driverClassLoader);
-                java.sql.Driver driver = driverClazz.newInstance();
+                java.sql.Driver driver = driverClazz.getDeclaredConstructor().newInstance();
                 conn = driver.connect(url, props);
-            } catch (ClassNotFoundException|IllegalAccessException|InstantiationException e) {
+            }
+            catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                 throw new SQLException(e);
             }
-            LOGGER.debug("Connected to {} with {}", url, props);
+            if (LOGGER.isDebugEnabled()) {
+                LOGGER.debug("Connected to {} with {}", url, propsWithMaskedPassword(props));
+            }
             return conn;
         };
+    }
+
+    private static Properties propsWithMaskedPassword(Properties props) {
+        final Properties filtered = new Properties();
+        filtered.putAll(props);
+        if (props.containsKey(JdbcConfiguration.PASSWORD.name())) {
+            filtered.put(JdbcConfiguration.PASSWORD.name(), "***");
+        }
+        return filtered;
     }
 
     private static Field[] combineVariables(Field[] overriddenVariables,
@@ -203,25 +258,32 @@ public class JdbcConnection implements AutoCloseable {
 
     private static String findAndReplace(String url, Properties props, Field... variables) {
         for (Field field : variables) {
-            if ( field != null ) {
-                url = findAndReplace(url, field.name(), props);
+            if (field != null) {
+                url = findAndReplace(url, field.name(), props, field.defaultValueAsString());
             }
         }
         for (Object key : new HashSet<>(props.keySet())) {
-            if (key != null ) {
-                url = findAndReplace(url, key.toString(), props);
+            if (key != null) {
+                url = findAndReplace(url, key.toString(), props, null);
             }
         }
         return url;
     }
 
-    private static String findAndReplace(String url, String name, Properties props) {
+    private static String findAndReplace(String url, String name, Properties props, String defaultValue) {
         if (name != null && url.contains("${" + name + "}")) {
             {
                 // Otherwise, we have to remove it from the properties ...
                 String value = props.getProperty(name);
                 if (value != null) {
                     props.remove(name);
+                }
+
+                if (value == null) {
+                    value = defaultValue;
+                }
+
+                if (value != null) {
                     // And replace the variable ...
                     url = url.replaceAll("\\$\\{" + name + "\\}", value);
                 }
@@ -242,7 +304,17 @@ public class JdbcConnection implements AutoCloseable {
      * @param connectionFactory the connection factory; may not be null
      */
     public JdbcConnection(Configuration config, ConnectionFactory connectionFactory) {
-        this(config, connectionFactory, null);
+        this(config, connectionFactory, (Operations) null);
+    }
+
+    /**
+     * Create a new instance with the given configuration and connection factory.
+     *
+     * @param config the configuration; may not be null
+     * @param connectionFactory the connection factory; may not be null
+     */
+    public JdbcConnection(Configuration config, ConnectionFactory connectionFactory, Supplier<ClassLoader> classLoaderSupplier) {
+        this(config, connectionFactory, null, null, classLoaderSupplier);
     }
 
     /**
@@ -267,9 +339,24 @@ public class JdbcConnection implements AutoCloseable {
      * @param adapter the function that can be called to update the configuration with defaults
      */
     protected JdbcConnection(Configuration config, ConnectionFactory connectionFactory, Operations initialOperations,
-            Consumer<Configuration.Builder> adapter) {
+                             Consumer<Configuration.Builder> adapter) {
+        this(config, connectionFactory, initialOperations, adapter, null);
+    }
+
+    /**
+     * Create a new instance with the given configuration and connection factory, and specify the operations that should be
+     * run against each newly-established connection.
+     *
+     * @param config the configuration; may not be null
+     * @param connectionFactory the connection factory; may not be null
+     * @param initialOperations the initial operations that should be run on each new connection; may be null
+     * @param adapter the function that can be called to update the configuration with defaults
+     * @param classLoaderSupplier class loader supplier
+     */
+    protected JdbcConnection(Configuration config, ConnectionFactory connectionFactory, Operations initialOperations,
+                             Consumer<Configuration.Builder> adapter, Supplier<ClassLoader> classLoaderSupplier) {
         this.config = adapter == null ? config : config.edit().apply(adapter).build();
-        this.factory = connectionFactory;
+        this.factory = classLoaderSupplier == null ? connectionFactory : new ConnectionFactoryDecorator(connectionFactory, classLoaderSupplier);
         this.initialOps = initialOperations;
         this.conn = null;
     }
@@ -285,6 +372,25 @@ public class JdbcConnection implements AutoCloseable {
 
     public JdbcConnection setAutoCommit(boolean autoCommit) throws SQLException {
         connection().setAutoCommit(autoCommit);
+        return this;
+    }
+
+    public JdbcConnection commit() throws SQLException {
+        Connection conn = connection();
+        if (!conn.getAutoCommit()) {
+            conn.commit();
+        }
+        return this;
+    }
+
+    public synchronized JdbcConnection rollback() throws SQLException {
+        if (!isConnected()) {
+            return this;
+        }
+        Connection conn = connection();
+        if (!conn.getAutoCommit()) {
+            conn.rollback();
+        }
         return this;
     }
 
@@ -332,9 +438,7 @@ public class JdbcConnection implements AutoCloseable {
         Connection conn = connection();
         try (Statement statement = conn.createStatement();) {
             operations.apply(statement);
-            if (!conn.getAutoCommit()) {
-                conn.commit();
-            }
+            commit();
         }
         return this;
     }
@@ -458,7 +562,8 @@ public class JdbcConnection implements AutoCloseable {
      * @throws SQLException if there is an error connecting to the database or executing the statements
      * @see #execute(Operations)
      */
-    public JdbcConnection prepareQuery(String[] multiQuery, StatementPreparer preparer, BlockingMultiResultSetConsumer resultConsumer) throws SQLException, InterruptedException {
+    public JdbcConnection prepareQuery(String[] multiQuery, StatementPreparer preparer, BlockingMultiResultSetConsumer resultConsumer)
+            throws SQLException, InterruptedException {
         final StatementPreparer[] preparers = new StatementPreparer[multiQuery.length];
         Arrays.fill(preparers, preparer);
         return prepareQuery(multiQuery, preparers, resultConsumer);
@@ -474,7 +579,8 @@ public class JdbcConnection implements AutoCloseable {
      * @throws SQLException if there is an error connecting to the database or executing the statements
      * @see #execute(Operations)
      */
-    public JdbcConnection prepareQuery(String[] multiQuery, StatementPreparer[] preparers, BlockingMultiResultSetConsumer resultConsumer) throws SQLException, InterruptedException {
+    public JdbcConnection prepareQuery(String[] multiQuery, StatementPreparer[] preparers, BlockingMultiResultSetConsumer resultConsumer)
+            throws SQLException, InterruptedException {
         final ResultSet[] resultSets = new ResultSet[multiQuery.length];
         final PreparedStatement[] preparedStatements = new PreparedStatement[multiQuery.length];
 
@@ -494,7 +600,7 @@ public class JdbcConnection implements AutoCloseable {
             }
         }
         finally {
-            for (ResultSet rs: resultSets) {
+            for (ResultSet rs : resultSets) {
                 if (rs != null) {
                     try {
                         rs.close();
@@ -506,7 +612,6 @@ public class JdbcConnection implements AutoCloseable {
         }
         return this;
     }
-
 
     /**
      * Execute a SQL query and map the result set into an expected type.
@@ -532,7 +637,8 @@ public class JdbcConnection implements AutoCloseable {
         }
     }
 
-    public JdbcConnection queryWithBlockingConsumer(String query, StatementFactory statementFactory, BlockingResultSetConsumer resultConsumer) throws SQLException, InterruptedException {
+    public JdbcConnection queryWithBlockingConsumer(String query, StatementFactory statementFactory, BlockingResultSetConsumer resultConsumer)
+            throws SQLException, InterruptedException {
         Connection conn = connection();
         try (Statement statement = statementFactory.createStatement(conn);) {
             if (LOGGER.isTraceEnabled()) {
@@ -577,7 +683,7 @@ public class JdbcConnection implements AutoCloseable {
         final PreparedStatement statement = createPreparedStatement(preparedQueryString);
         preparer.accept(statement);
         try (ResultSet resultSet = statement.executeQuery();) {
-            if (resultConsumer != null){
+            if (resultConsumer != null) {
                 resultConsumer.accept(resultSet);
             }
         }
@@ -599,7 +705,7 @@ public class JdbcConnection implements AutoCloseable {
         final PreparedStatement statement = createPreparedStatement(preparedQueryString);
         preparer.accept(statement);
         try (ResultSet resultSet = statement.executeQuery();) {
-            if (resultConsumer != null){
+            if (resultConsumer != null) {
                 resultConsumer.accept(resultSet);
             }
         }
@@ -660,7 +766,7 @@ public class JdbcConnection implements AutoCloseable {
             throws SQLException {
         final PreparedStatement statement = createPreparedStatement(preparedQueryString);
         int index = 1;
-        for (final Object parameter: parameters) {
+        for (final Object parameter : parameters) {
             statement.setObject(index++, parameter);
         }
         try (ResultSet resultSet = statement.executeQuery()) {
@@ -705,7 +811,8 @@ public class JdbcConnection implements AutoCloseable {
                 sb.setLength(0);
             }
             lines.accept(delimiter(columnCount, columnSizes));
-        } catch (SQLException e) {
+        }
+        catch (SQLException e) {
             throw new RuntimeException(e);
         }
     }
@@ -813,8 +920,10 @@ public class JdbcConnection implements AutoCloseable {
             try {
                 statementCache.values().forEach(this::cleanupPreparedStatement);
                 statementCache.clear();
+                LOGGER.trace("Closing database connection");
                 conn.close();
-            } finally {
+            }
+            finally {
                 conn = null;
             }
         }
@@ -928,7 +1037,7 @@ public class JdbcConnection implements AutoCloseable {
     public String connectionString(String urlPattern) {
         Properties props = config.asProperties();
         return findAndReplace(urlPattern, props, JdbcConfiguration.DATABASE, JdbcConfiguration.HOSTNAME, JdbcConfiguration.PORT,
-                              JdbcConfiguration.USER, JdbcConfiguration.PASSWORD);
+                JdbcConfiguration.USER, JdbcConfiguration.PASSWORD);
     }
 
     /**
@@ -936,15 +1045,16 @@ public class JdbcConnection implements AutoCloseable {
      *
      * @return a {@code String}, never {@code null}
      */
-    public String username()  {
+    public String username() {
         return config.getString(JdbcConfiguration.USER);
     }
-  /**
+
+    /**
      * Returns the database name for this connection
      *
      * @return a {@code String}, never {@code null}
      */
-    public String database()  {
+    public String database() {
         return config.getString(JdbcConfiguration.DATABASE);
     }
 
@@ -959,6 +1069,17 @@ public class JdbcConnection implements AutoCloseable {
      */
     protected int resolveNativeType(String typeName) {
         return Column.UNSET_INT_VALUE;
+    }
+
+    /**
+     * Resolves the supplied metadata JDBC type to a final JDBC type.
+     *
+     * @param metadataJdbcType the JDBC type from the underlying driver's metadata lookup
+     * @param nativeType the database native type or -1 for unknown
+     * @return the resolved JDBC type
+     */
+    protected int resolveJdbcType(int metadataJdbcType, int nativeType) {
+        return metadataJdbcType;
     }
 
     /**
@@ -987,9 +1108,9 @@ public class JdbcConnection implements AutoCloseable {
         // Read the metadata for the table columns ...
         DatabaseMetaData metadata = connection().getMetaData();
 
-        // Find views as they cannot be snapshotted
+        // Find regular and materialized views as they cannot be snapshotted
         final Set<TableId> viewIds = new HashSet<>();
-        try (final ResultSet rs = metadata.getTables(databaseCatalog, schemaNamePattern, null, new String[] {"VIEW"})) {
+        try (final ResultSet rs = metadata.getTables(databaseCatalog, schemaNamePattern, null, new String[]{ "VIEW", "MATERIALIZED VIEW" })) {
             while (rs.next()) {
                 final String catalogName = rs.getString(1);
                 final String schemaName = rs.getString(2);
@@ -1006,16 +1127,16 @@ public class JdbcConnection implements AutoCloseable {
                 String tableName = columnMetadata.getString(3);
                 TableId tableId = new TableId(catalogName, schemaName, tableName);
 
-                // exclude views and non-whitelisted tables
+                // exclude views and non-captured tables
                 if (viewIds.contains(tableId) ||
                         (tableFilter != null && !tableFilter.isIncluded(tableId))) {
                     continue;
                 }
 
-                // add all whitelisted columns
+                // add all included columns
                 readTableColumn(columnMetadata, tableId, columnFilter).ifPresent(column -> {
                     columnsByTable.computeIfAbsent(tableId, t -> new ArrayList<>())
-                        .add(column.create());
+                            .add(column.create());
                 });
             }
         }
@@ -1023,7 +1144,7 @@ public class JdbcConnection implements AutoCloseable {
         // Read the metadata for the primary keys ...
         for (Entry<TableId, List<Column>> tableEntry : columnsByTable.entrySet()) {
             // First get the primary key information, which must be done for *each* table ...
-            List<String> pkColumnNames = readPrimaryKeyNames(metadata, tableEntry.getKey());
+            List<String> pkColumnNames = readPrimaryKeyOrUniqueIndexNames(metadata, tableEntry.getKey());
 
             // Then define the table ...
             List<Column> columns = tableEntry.getValue();
@@ -1041,13 +1162,12 @@ public class JdbcConnection implements AutoCloseable {
 
     /**
      * Returns a {@link ColumnEditor} representing the current record of the given result set of column metadata, if
-     * included in the column whitelist.
+     * included in column.include.list.
      */
     protected Optional<ColumnEditor> readTableColumn(ResultSet columnMetadata, TableId tableId, ColumnNameFilter columnFilter) throws SQLException {
         final String columnName = columnMetadata.getString(4);
         if (columnFilter == null || columnFilter.matches(tableId.catalog(), tableId.schema(), tableId.table(), columnName)) {
             final ColumnEditor column = Column.editor().name(columnName);
-            column.jdbcType(columnMetadata.getInt(5));
             column.type(columnMetadata.getString(6));
             column.length(columnMetadata.getInt(7));
             if (columnMetadata.getObject(9) != null) {
@@ -1066,10 +1186,19 @@ public class JdbcConnection implements AutoCloseable {
             column.generated("YES".equalsIgnoreCase(autogenerated));
 
             column.nativeType(resolveNativeType(column.typeName()));
-
+            column.jdbcType(resolveJdbcType(columnMetadata.getInt(5), column.nativeType()));
+            final String defaultValue = columnMetadata.getString(13);
+            if (defaultValue != null) {
+                getDefaultValue(column.create(), defaultValue).ifPresent(column::defaultValue);
+            }
             return Optional.of(column);
         }
 
+        return Optional.empty();
+    }
+
+    protected Optional<Object> getDefaultValue(Column column, String defaultValue) {
+        // nothing to do by default; overwrite in database specific implementation
         return Optional.empty();
     }
 
@@ -1083,6 +1212,37 @@ public class JdbcConnection implements AutoCloseable {
             }
         }
         return pkColumnNames;
+    }
+
+    public List<String> readTableUniqueIndices(DatabaseMetaData metadata, TableId id) throws SQLException {
+        final List<String> uniqueIndexColumnNames = new ArrayList<>();
+        try (ResultSet rs = metadata.getIndexInfo(id.catalog(), id.schema(), id.table(), true, true)) {
+            String firstIndexName = null;
+            while (rs.next()) {
+                final String indexName = rs.getString(6);
+                final String columnName = rs.getString(9);
+                final int columnIndex = rs.getInt(8);
+                if (firstIndexName == null) {
+                    firstIndexName = indexName;
+                }
+                // SQL Server provides indices also without index name
+                // so we need to ignore them
+                if (indexName == null) {
+                    continue;
+                }
+                // Only first unique index is taken into consideration
+                if (indexName != null && !indexName.equals(firstIndexName)) {
+                    return uniqueIndexColumnNames;
+                }
+                Collect.set(uniqueIndexColumnNames, columnIndex - 1, columnName, null);
+            }
+        }
+        return uniqueIndexColumnNames;
+    }
+
+    protected List<String> readPrimaryKeyOrUniqueIndexNames(DatabaseMetaData metadata, TableId id) throws SQLException {
+        final List<String> pkColumnNames = readPrimaryKeyNames(metadata, id);
+        return pkColumnNames.isEmpty() ? readTableUniqueIndices(metadata, id) : pkColumnNames;
     }
 
     private void cleanupPreparedStatement(PreparedStatement statement) {
@@ -1118,51 +1278,42 @@ public class JdbcConnection implements AutoCloseable {
         Connection conn = connection();
         try (Statement statement = conn.createStatement()) {
             for (String stmt : statements) {
+                if (LOGGER.isTraceEnabled()) {
+                    LOGGER.trace("Executing statement {}", stmt);
+                }
                 statement.execute(stmt);
             }
         }
         return this;
     }
 
-    /**
-     * Use the supplied table editor to create columns for the supplied result set.
-     *
-     * @param resultSet the query result set; may not be null
-     * @param editor the consumer of the definitions; may not be null
-     * @throws SQLException if an error occurs while using the result set
-     */
-    public static void columnsFor(ResultSet resultSet, TableEditor editor) throws SQLException {
-        List<Column> columns = new ArrayList<>();
-        columnsFor(resultSet, columns::add);
-        editor.setColumns(columns);
-    }
-
-    /**
-     * Determine the column definitions for the supplied result set and add each column to the specified consumer.
-     *
-     * @param resultSet the query result set; may not be null
-     * @param consumer the consumer of the definitions; may not be null
-     * @throws SQLException if an error occurs while using the result set
-     */
-    public static void columnsFor(ResultSet resultSet, Consumer<Column> consumer) throws SQLException {
-        ResultSetMetaData metadata = resultSet.getMetaData();
-        ColumnEditor column = Column.editor();
-        for (int position = 1; position <= metadata.getColumnCount(); ++position) {
-            String columnLabel = metadata.getColumnLabel(position);
-            column.name(columnLabel != null ? columnLabel : metadata.getColumnName(position));
-            column.type(metadata.getColumnTypeName(position));
-            column.jdbcType(metadata.getColumnType(position));
-            column.length(metadata.getPrecision(position));
-            column.scale(metadata.getScale(position));
-            column.optional(isNullable(metadata.isNullable(position)));
-            column.autoIncremented(metadata.isAutoIncrement(position));
-            column.generated(false);
-            consumer.accept(column.create());
-        }
-    }
-
-    private static boolean isNullable(int jdbcNullable) {
+    protected static boolean isNullable(int jdbcNullable) {
         return jdbcNullable == ResultSetMetaData.columnNullable || jdbcNullable == ResultSetMetaData.columnNullableUnknown;
     }
 
+    public <T> ResultSetMapper<T> singleResultMapper(ResultSetExtractor<T> extractor, String error) throws SQLException {
+        return (rs) -> {
+            if (rs.next()) {
+                final T ret = extractor.apply(rs);
+                if (!rs.next()) {
+                    return ret;
+                }
+            }
+            throw new IllegalStateException(error);
+        };
+    }
+
+    public static <T> T querySingleValue(Connection connection, String queryString, StatementPreparer preparer, ResultSetExtractor<T> extractor) throws SQLException {
+        final PreparedStatement preparedStatement = connection.prepareStatement(queryString);
+        preparer.accept(preparedStatement);
+        try (ResultSet resultSet = preparedStatement.executeQuery()) {
+            if (resultSet.next()) {
+                final T result = extractor.apply(resultSet);
+                if (!resultSet.next()) {
+                    return result;
+                }
+            }
+            throw new IllegalStateException("Exactly one result expected.");
+        }
+    }
 }
